fix nabvar visible

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -8,6 +8,7 @@
 }
 .navbar-btn-home{
     padding-right: 10px;
+    font-size: 1.3rem;
 }
 /* 
 .navbar {
@@ -84,6 +85,7 @@ nav{
   }
   
   .navbar-toggle {
+    font-size: 1.3rem;
     cursor: pointer;
     display: none;
   }
@@ -122,7 +124,7 @@ nav{
       transform: translateX(-120%);
       > a {
         display: flex;
-        padding: 5px 10px;
+        padding: 6px 10px;
         width: 100%;
         height: 40px;
       }
